# github-code-1

./: .env.example  .gitignore  BACKEND_ARCHITECTURE.md  Cargo.toml  FEATURE_BACKLOG.md  FEATURE_STATUS.md  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
data/: cameroon_admin3_seed.tsv
db/: init.sql
scripts/: feature_status_check.ps1
src/: app.rs  db.rs  handlers.rs  main.rs  models.rs  routes.rs  seeds.rs  services.rs  workflow.rs
static/: app.js  index.html  styles.css  styles.input.css
