[package]
name = "cameroon_phone_monitor"
version = "0.1.0"
edition = "2021"
authors = ["github-code-1"]
description = "A Rust backend webapp for monitoring Cameroon mobile phone ownership."
license = "MIT"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }
tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
